# 26FW-FinML

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
config/experiment/: gru_pairmse.yaml  mlp_mse.yaml
config/model/: base.yaml
model/default_experiment/: last_s42.pt
notebooks/: demo_1.ipynb
output/default_experiment/: pred_s42.npy
src/: constants.py  datasets.py  eval.py  eval_utils.py  main.py  trainer.py  utils.py
src/models/: __init__.py  loss.py  seq_model.py
